--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.8",
     "axios-mock-adapter": "^1.22.0",
     "country-iso-3-to-2": "^1.1.1",
+    "i18n-iso-countries": "^7.10.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
